2007-05-02  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: Bug 435129 - crashes when using subrendering
	
2007-05-01  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: mem leak in rsvg_cairo_render_sub (#409030)
	
2007-05-01  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: #427031, again
	
2007-05-01  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* tests/rsvg-test.c: change generated png filename suffix from .png to
	-out.png. That makes thing cleaner for svn:ignore.

2007-05-01  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-marker.c (rsvg_render_markers): fix marker orientation for spline
	paths. 
	* tests/samples/arrows.svg,
	* tests/samples/arrows-ref.png: test file and reference rendering.

2007-04-23  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: Incorrect rendering of certain SVG files because of
	SVG namespaces. Patch from Bertram Felgenhauer (#375649)
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-image.c: Bug 421697 - rsvg_handle_new_from_file overwrites GError
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: Bug 421710 - want a way to detect whether 
	gnome-vfs support is enabled (Christian Perch)
	
2007-04-12  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: If dst->virgin is set, dst->x, y, w and h are 
	uninitialised. The result of the addition is already not used, 
	but the addition itself can trigger floating point exceptions, 
	so make sure it's not performed. Bug 427031 (Harald van Dijk)

2007-02-22  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Update reference files. They are generated using MS fonts.
	(http://corefonts.sourceforge.net/)

2007-02-21  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Implement letter-spacing property.
	http://bugzilla.gnome.org/show_bug.cgi?id=410509
	* rsvg-styles.c: parse and handle letter-spacing.
	* rsvg-text.c (rsvg_text_create_layout): set letter spacing attribute.
